test/link/script-huge-ds.out
error: Cannot increase the current address by 65536 bytes: only 16384 bytes to $4000
    at script-huge-ds.link(2)
Linking failed with 1 error
